<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="lib_name" translatable="false">sCommon</string>

    <!--Theme-->
    <string name="app_theme">App Theme</string>
    <string name="app_theme_auto">Auto</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_light">Light</string>

    <!--General-->
    <string name="cancel">Cancel</string>
    <string name="copyright">Copyright: © %s</string>
    <string name="crash_report">Crash Report</string>
    <string name="crash_report_message">A crash is detected during the last use of this app. Inorder to help the developer to fix this issue, please consider reporting this crash log to \n\nE-mail: smartpack.org@gmail.com</string>
    <string name="crash_reproduce_steps">Steps to reproduce crash (Optional)</string>
    <string name="credits">Credits</string>
    <string name="credits_summary">A list of people who contributed to this project</string>
    <string name="dismiss">Dismiss</string>
    <string name="report">Report</string>
    <string name="version">Version: %s</string>

    <!--Language-->
    <string name="language_am" translatable="false">አማርኛ</string>
    <string name="language_ar" translatable="false">العربية</string>
    <string name="language_cs" translatable="false">čeština</string>
    <string name="language_de" translatable="false">Deutsch</string>
    <string name="language_el" translatable="false">Ελληνικά</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_es" translatable="false">Español</string>
    <string name="language_fr" translatable="false">français</string>
    <string name="language_hu" translatable="false">Magyar</string>
    <string name="language_hr" translatable="false">Hrvatski</string>
    <string name="language_in" translatable="false">bahasa Indonesia</string>
    <string name="language_it" translatable="false">Italiano</string>
    <string name="language_jp" translatable="false">日本</string>
    <string name="language_ko" translatable="false">한국어</string>
    <string name="language_ml" translatable="false">മലയാളം</string>
    <string name="language_my" translatable="false">ဗမာ</string>
    <string name="language_nb" translatable="false">norsk</string>
    <string name="language_pl" translatable="false">Polski"</string>
    <string name="language_pt" translatable="false">Português</string>
    <string name="language_ru" translatable="false">русский</string>
    <string name="language_sv" translatable="false">svenska</string>
    <string name="language_tr" translatable="false">Türkçe</string>
    <string name="language_uk" translatable="false">Українська</string>
    <string name="language_vi" translatable="false">Tiếng Việt</string>
    <string name="language_zh" translatable="false">中文（简体）</string>

    <!--Installer-->
    <string name="installation_cancel_message">Are you sure to cancel the installation?</string>
    <string name="installation_status_aborted">Installation was cancelled by user</string>
    <string name="installation_status_bad_apks">Invalid APK files selected</string>
    <string name="installation_status_blocked">Installation was blocked</string>
    <string name="installation_status_conflict">Unable to install the app because it conflicts with an already installed app with same package name</string>
    <string name="installation_status_failed">Installation Failed</string>
    <string name="installation_status_incompatible">Application is incompatible with this device</string>
    <string name="installation_status_storage">Not enough storage space to install the app</string>
    <string name="installation_status_success">Installation Completed Successfully</string>

    <!--Permissions-->
    <string name="permission_access_notification">Allows a system app to access notifications</string>
    <string name="permission_accessibility_service">Required by an Accessibility Service, to ensure that only the system can bind to it</string>
    <string name="permission_audio_notification">Change notification volume</string>
    <string name="permission_boot_completed">Receive a broadcast indicating that the system has finished booting</string>
    <string name="permission_body_sensors">Access data from sensors that the user uses to measure what is happening inside his/her body, such as heart rate</string>
    <string name="permission_call_phone">Allows an application to initiate a phone call without going through the Dialer user interface for the user to confirm the call</string>
    <string name="permission_camera">Required to be able to access the camera device</string>
    <string name="permission_change_wifi">Allows applications to change Wi-Fi connectivity state</string>
    <string name="permission_coarse_location">Allows an app to access approximate location</string>
    <string name="permission_delete_packages">Allows an application to request deleting packages</string>
    <string name="permission_fine_location">Allows an application to access precise location</string>
    <string name="permission_get_accounts">Allows access to the list of accounts in the Accounts Service</string>
    <string name="permission_gps">Allows an application to access the GPS</string>
    <string name="permission_install_packages">Allows an application to install packages</string>
    <string name="permission_mute_microphone">Allows an application to access mute the microphone</string>
    <string name="permission_neighbouring_cells">Allows an application to received Signal Strength and Cell ID location</string>
    <string name="permission_post_notification">Allows an application to post notifications</string>
    <string name="permission_process_outgoing_calls">Allows an application to see the number being dialed during an outgoing call with the option to redirect the call to a different number or abort the call altogether</string>
    <string name="permission_read_calender">Allows an application to read the user\'s calendar data</string>
    <string name="permission_read_call_log">Allows an application to read the user\'s call log</string>
    <string name="permission_read_clipboard">Read contents of the clipboard service</string>
    <string name="permission_read_contacts">Allows an application to read the user\'s contacts data</string>
    <string name="permission_read_storage">Allows an application to read from external storage</string>
    <string name="permission_read_phone_numbers">Allows read access to the device\'s phone number(s). This is a subset of the capabilities granted by READ_PHONE_STATE but is exposed to instant applications</string>
    <string name="permission_read_phone_state">Allows read only access to phone state, including the phone number of the device, current cellular network information, the status of any ongoing calls, and a list of any phone accounts registered on the device</string>
    <string name="permission_read_sms">Allows an application to read SMS messages</string>
    <string name="permission_receive_mms">Allows an application to monitor incoming MMS messages</string>
    <string name="permission_receive_sms">Allows an application to receive SMS messages</string>
    <string name="permission_receive_emergency_sms">Allows an application to receive Emergency SMS messages</string>
    <string name="permission_receive_wap_push">Allows an application to receive WAP push messages</string>
    <string name="permission_record_audio">Allows an application to record audio</string>
    <string name="permission_ring_volume">Change ring volume</string>
    <string name="permission_run_background">Allows an application to run in the background</string>
    <string name="permission_start_foreground">Start foreground services. Requires FOREGROUND_SERVICE permission</string>
    <string name="permission_system_alert_window">Create windows and show them on top of all other apps</string>
    <string name="permission_take_audio_focus">Allows an application to be the only one holding audio focus</string>
    <string name="permission_toast_window">Show short duration messages on screen</string>
    <string name="permission_unavailable">Description for \'%s\' is not available</string>
    <string name="permission_usage_status">Allows an application to collect component usage statistics</string>
    <string name="permission_use_biometric">Use device supported biometric modalities</string>
    <string name="permission_use_fingerprint">Allows an app to use fingerprint hardware</string>
    <string name="permission_vibrate">Allows access to the vibrator</string>
    <string name="permission_wake_lock">Use PowerManager WakeLocks to keep processor from sleeping or screen from dimming</string>
    <string name="permission_wifi_scan">Allows an application to access scan WiFi networks</string>
    <string name="permission_write_calender">Allows an application to write the user\'s calendar data</string>
    <string name="permission_write_call_log">Allows an application to write (but not read) the user\'s call log data</string>
    <string name="permission_write_clipboard">Write data to the clipboard</string>
    <string name="permission_write_contacts">Allows an application to write the user\'s contacts data</string>
    <string name="permission_write_settings">Read or write the system settings (there are limitations)</string>
    <string name="permission_write_sms">Allows an application to send SMS messages</string>
    <string name="permission_write_storage">Allows an application to write to external storage</string>
    <string name="permission_write_wallpaper">Allows an application to set the wallpaper</string>

    <!--Translations-->
    <string name="translate">Translate %s</string>
    <string name="translations">Translations</string>
    <string name="translations_message">Important: This application uses a lot of strings from sCommon, an open-source library sharing common code-base for most of the projects made by this developer. Hence, in-order to use this app completely in your language, please consider translating the library as well.</string>
    <string name="translations_summary">Help me to translate this app. Click here to visit POEditor localization project</string>
</resources>