<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="top" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:gravity="center_vertical" >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:tint="@color/colorWhite"
                    android:src="@drawable/ic_back"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:scaleType="center" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:text="@string/crash_report"
                    android:textStyle="bold"
                    android:padding="10dp" />
        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/crash_report_message"
                            android:textIsSelectable="true"
                            android:layout_margin="10dp"
                            android:textStyle="italic"
                            android:gravity="start"
                            android:textSize="15sp" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp" >

                                <HorizontalScrollView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    tools:targetApi="cupcake" >

                                        <com.google.android.material.textview.MaterialTextView
                                            android:id="@+id/crash_log"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textIsSelectable="true"
                                            android:textStyle="bold|italic"
                                            android:gravity="start"
                                            android:textSize="17sp" />
                                </HorizontalScrollView>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="10dp" >

                                <androidx.appcompat.widget.LinearLayoutCompat
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical" >

                                        <com.google.android.material.textview.MaterialTextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/crash_reproduce_steps"
                                            android:layout_margin="10dp"
                                            android:textStyle="bold"
                                            android:gravity="start"
                                            android:textSize="17sp" />

                                        <androidx.appcompat.widget.AppCompatEditText
                                            android:id="@+id/crash_steps"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:textStyle="bold|italic"
                                            android:layout_margin="10dp"
                                            android:gravity="start"
                                            android:textSize="15sp" />
                                </androidx.appcompat.widget.LinearLayoutCompat>
                        </com.google.android.material.card.MaterialCardView>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center" >

                                <com.google.android.material.card.MaterialCardView
                                    android:id="@+id/cancel_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    app:cardCornerRadius="15dp" >

                                        <com.google.android.material.textview.MaterialTextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textStyle="bold|italic"
                                            android:text="@string/cancel"
                                            android:layout_margin="10dp"
                                            android:clickable="false"
                                            android:gravity="start"
                                            android:textSize="17sp" />
                                </com.google.android.material.card.MaterialCardView>

                                <com.google.android.material.card.MaterialCardView
                                    android:id="@+id/report_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    app:cardCornerRadius="15dp" >

                                        <com.google.android.material.textview.MaterialTextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textStyle="bold|italic"
                                            android:text="@string/report"
                                            android:layout_margin="10dp"
                                            android:clickable="false"
                                            android:gravity="start"
                                            android:textSize="17sp" />
                                </com.google.android.material.card.MaterialCardView>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>